NIFI-14051 Replaced type arguments with diamonds, replaced anonymous classes with lambdas and replaced certain assertions with more specific assertions.